--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,36 @@ jobs:
           cache: "npm"
       - run: npm i
       - run: npm run build
+
+    deploy:
+      needs: test-build
+      runs-on: ubuntu-latest
+
+      strategy:
+        matrix:
+          node-version: [16.x]
+
+      steps:
+        - name: Build app on VM
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USERNAME }}
+            password: ${{ secrets.PASSWORD }}
+            script: |
+              eval "$(ssh-agent -s)"
+              ssh-add ~/.ssh/<<private_key>>
+              echo "Cek folder project";
+              [ ! -d "${HOME}/senpro/482306/modul02/<<project_name>>/" ] &&
+              {
+                echo "Repository belum di-clone. Cloning...";
+                mkdir -p ~/senpro/482306/modul02;
+                cd ~/senpro/482306/modul02;
+                git clone <<repo_url>>;
+              } || 
+              {
+                echo "Repository sudah ada. Building...";
+                cd ~/senpro/482306/modul02/<<project_name>>;
+                git restore .;
+                git pull origin main;
+              }
